JSW Devsb/src/objects/PIB_ASM_Targets__c.object
<CustomObject>
    <fields>
        <fullName>CHD_15_Day_Actuals__c</fullName>
        <label>CHD 15 Day Actuals</label>
        <summarizedField>PIB_SO_Targets__c.CHD_15_Day_Actuals__c</summarizedField>
        <summaryForeignKey>PIB_SO_Targets__c.PIB_ASM_Targets__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CHD_Actuals__c</fullName>
        <label>CHD Actuals</label>
        <summarizedField>PIB_SO_Targets__c.CHD_Actuals__c</summarizedField>
        <summaryForeignKey>PIB_SO_Targets__c.PIB_ASM_Targets__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CHD_Target__c</fullName>
        <label>CHD Target</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Collection_Actuals__c</fullName>
        <label>Collection Actuals</label>
        <summarizedField>PIB_SO_Targets__c.Collection_Actuals__c</summarizedField>
        <summaryForeignKey>PIB_SO_Targets__c.PIB_ASM_Targets__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ELP_Target__c</fullName>
        <label>ELP Target</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Employee_Code__c</fullName>
        <label>Employee Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MLP_Target__c</fullName>
        <label>MLP Target</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <label>Month</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Monthly_Volume_Target__c</fullName>
        <formula>CHD_Target__c  +  PSC_Target__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Monthly Volume Target</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NSR_Actuals__c</fullName>
        <label>NSR Actuals</label>
        <summarizedField>PIB_SO_Targets__c.NSR_Actuals__c</summarizedField>
        <summaryForeignKey>PIB_SO_Targets__c.PIB_ASM_Targets__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>NSR_Target__c</fullName>
        <label>NSR Target</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_fo_MLP_Registrations__c</fullName>
        <label>No fo MLP Registrations</label>
        <summarizedField>PIB_SO_Targets__c.No_fo_MLP_Registrations__c</summarizedField>
        <summaryForeignKey>PIB_SO_Targets__c.PIB_ASM_Targets__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>PSC_15_Day_Actuals__c</fullName>
        <label>PSC 15 Day Actuals</label>
        <summarizedField>PIB_SO_Targets__c.PSC_15_Day_Actuals__c</summarizedField>
        <summaryForeignKey>PIB_SO_Targets__c.PIB_ASM_Targets__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>PSC_Actuals__c</fullName>
        <label>PSC Actuals</label>
        <summarizedField>PIB_SO_Targets__c.PSC_Actuals__c</summarizedField>
        <summaryForeignKey>PIB_SO_Targets__c.PIB_ASM_Targets__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>PSC_Target__c</fullName>
        <label>PSC Target</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_15_Day_Actuals__c</fullName>
        <formula>CHD_15_Day_Actuals__c   +  PSC_15_Day_Actuals__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total 15 Day Actuals</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Actuals__c</fullName>
        <formula>CHD_Actuals__c  +  PSC_Actuals__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Actuals</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X15_Day_Target__c</fullName>
        <label>15 Day Target</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <label>PIB ASM Targets</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PIBASM-{000000}</displayFormat>
        <label>PIB ASM Targets Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PIB ASM Targets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>